examples/test/testpolicy6590.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6590
  namespace: namespace29
spec:
  podSelector:
    matchLabels:
      key25: value46
      key10: value12
      key14: value46
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key10: value37
          key3: value32
          key37: value5
      podSelector:
        matchLabels:
          key10: value22
          key35: value5
